<resources>
    <string name="app_name">36Kr</string>

    <string name="home_bottom_tab_news_text">新闻</string>
    <string name="home_bottom_tab_equity_text">股权投资</string>
    <string name="home_bottom_tab_find_text">发现</string>
    <string name="home_bottom_tab_me_text">我的</string>

    <string name="equity_item_attention">关注</string>

    <string name="fragment_me_top_text">未登录</string>
    <string name="fragment_me_wdxx_text">我的消息</string>
    <string name="fragment_me_wddd_text">我的订单</string>
    <string name="fragment_me_zhxx_text">账号信息</string>
    <string name="fragment_me_gtrrz_text">跟投人认证</string>
    <string name="fragment_me_gtrrz1_text">新人专项500元</string>
    <string name="fragment_me_wscdwz_text">我收藏的文章</string>
    <string name="fragment_me_wtzdgs_text">我投资的公司</string>
    <string name="fragment_me_wdtzj_text">我的投资劵</string>
    <string name="fragment_me_ljgqtz_text">了解股权投资</string>
    <string name="fragment_me_kfrx_text">客服热线</string>
    <string name="fragment_me_kfrx1_text">400-995-3636</string>
    <string name="fragment_me_gtj_text">氪推荐</string>
    <string name="fragment_me_gtj1_text">发现好用App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">手机号/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">忘记密码？</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
