<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/home_bottom_tab_marginTop"
    android:orientation="vertical"
    android:gravity="bottom">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:orientation="horizontal"
        android:id="@+id/radiogroup"
        android:gravity="center">

        <RadioButton
            android:id="@+id/home_tab_news"
            style="@style/home_tab"
            android:drawableTop="@drawable/home_radiobtn_news"
            android:textColor="@color/home_tab_textcolor_selector"
            android:text="@string/home_bottom_tab_news_text"/>
        <RadioButton
            android:id="@+id/home_tab_equity"
            style="@style/home_tab"
            android:drawableTop="@drawable/home_radiobtn_equity"
            android:textColor="@color/home_tab_textcolor_selector"
            android:text="@string/home_bottom_tab_equity_text"/>
        <RadioButton
            android:id="@+id/home_tab_find"
            style="@style/home_tab"
            android:drawableTop="@drawable/home_radiobtn_find"
            android:textColor="@color/home_tab_textcolor_selector"
            android:text="@string/home_bottom_tab_find_text"/>
        <RadioButton
            android:id="@+id/home_tab_me"
            style="@style/home_tab"
            android:drawableTop="@drawable/home_radiobtn_me"
            android:textColor="@color/home_tab_textcolor_selector"
            android:text="@string/home_bottom_tab_me_text"/>
    </RadioGroup>
</LinearLayout>
