<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_me_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_me_top_height"
        android:background="@color/bluetitle">

        <ImageView
            android:id="@+id/fragment_me_set_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/velcom_logo_bottom_margin"
            android:onClick="login"
            android:src="@mipmap/mine_icon_setting"/>
        <ImageView
            android:id="@+id/fragment_me_login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/velcom_logo_bottom_margin"
            android:onClick="login"
            android:src="@mipmap/common_avatar"/>
        <TextView
            android:id="@+id/fragment_me_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_bg_white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/fragment_me_top_margin"
            android:layout_toRightOf="@+id/fragment_me_login_image"
            android:textSize="@dimen/fragment_me_top_text_size"
            android:onClick="login"
            android:text="@string/fragment_me_top_text"/>
        <ImageView
            android:id="@+id/fragment_me_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="@dimen/home_fragment_margin"
            android:layout_margin="@dimen/velcom_logo_bottom_margin"
            android:onClick="login"
            android:src="@mipmap/mine_icon_arrow"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:background="@color/color_bg_white">

        <LinearLayout
            android:id="@+id/linearlayout_wdxx"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="login"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mine_icon_message"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_category_back"
                android:textSize="@dimen/category_item_text_size"
                android:text="@string/fragment_me_wdxx_text"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearlayout_wddd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:onClick="login"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mine_icon_order"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/home_category_back"
                android:textSize="@dimen/category_item_text_size"
                android:text="@string/fragment_me_wddd_text"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/home_category_back"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_zhxx"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_wddd_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_wddd_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_wddd_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_gtrrz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:onClick="login"
        android:gravity="center_vertical"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_gtrrz_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_authentication"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_gtrrz_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_gtrrz_text"/>
        <ImageView
            android:id="@+id/fragment_somll1_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_me_font1"
            android:layout_toLeftOf="@id/fragment_somll1_image"
            android:layout_marginRight="@dimen/layout_margin_size_8"
            android:text="@string/fragment_me_gtrrz1_text"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/home_category_back"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_wscdwz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_wscdwz_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_favorite"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_wscdwz_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_wscdwz_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_wtzdgs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_wtzdgs_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_img_company"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_wtzdgs_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_wtzdgs_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_wdtzj"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_wdtzj_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_coupon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_wdtzj_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_wdtzj_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_ljgqtz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_ljgqtz_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_understand"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_ljgqtz_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_ljgqtz_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/home_category_back"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_kfrx"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_kfrx_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_hotline"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_kfrx_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_kfrx_text"/>
        <ImageView
            android:id="@+id/fragment_smoll2_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_me_font1"
            android:layout_toLeftOf="@id/fragment_smoll2_image"
            android:layout_marginRight="@dimen/layout_margin_size_8"
            android:text="@string/fragment_me_kfrx1_text"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/albumback"/>
    <RelativeLayout
        android:id="@+id/linearlayout_gtj"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bottom_tab_marginTop"
        android:gravity="center_vertical"
        android:onClick="login"
        android:background="@color/color_bg_white">

        <ImageView
            android:id="@+id/fragment_me_gtj_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_fragment_margin"
            android:src="@mipmap/mine_icon_commend"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_me_gtj_image"
            android:layout_marginLeft="@dimen/home_category_back"
            android:textSize="@dimen/category_item_text_size"
            android:text="@string/fragment_me_gtj_text"/>
        <ImageView
            android:id="@+id/fragment_smoll_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/home_fragment_margin"
            android:src="@mipmap/common_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_me_font1"
            android:layout_toLeftOf="@id/fragment_smoll_image"
            android:layout_marginRight="@dimen/layout_margin_size_8"
            android:text="@string/fragment_me_gtj1_text"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="@dimen/home_category_back"
        android:background="@color/albumback"/>
</LinearLayout>
</ScrollView>